# auto-rest

./: .gitignore  Dockerfile  README.md  demo.sh  mkdocs.yml  pyproject.toml  sonar-project.properties
.github/workflows/: Build.yml  Publish.yml  QA.yml  Release.yml  Test.yml
auto_rest/: __main__.py  app.py  auth.py  cli.py  dependencies.py  dist.py  handlers.py  interfaces.py  mcp.py  metadata.py  models.py  params.py  queries.py  routers.py  utils.py
demo/: data.sql  demo.sh
docs/: contributing.md  index.md
docs/_static/css/: theme.css
docs/_static/img/: architecture.drawio
docs/architecture/: handlers.md  interfaces.md  overview.md  params.md  queries.md  routers.md
docs/contributing/: dev_reference.md  guidelines.md
docs/getting_started/: deploying.md  install.md  launching.md  production.md  running_prod.md
docs/reference/: auto_rest.app.md  auto_rest.cli.md  auto_rest.md  auto_rest.models.md  dependencies.md  metadata.md
docs/static/: architecture.drawio
tests/: fixtures.sql
tests/app/: test_configure_logging.py  test_create_app.py  test_create_route_handlers.py  test_create_router.py  test_logging_middleware.py
tests/cli/: test_configure_cli_logging.py  test_configure_console_logging.py  test_create_argument_parser.py  test_create_cli_parser.py  test_format_parsed_args.py
tests/compatibility_tests/: __init__.py  base.py  test.py  test_pqsl.py  test_sqlite.py
tests/compatibility_tests/utils/: __init__.py  base.py  fixtures.py
tests/dependencies/: test_apply_ordering_params.py  test_apply_pagination_params.py  test_get_ordering_params.py  test_get_pagination_params.py
tests/func_tests/: test_root.py
tests/func_tests/fixtures/: __init__.py  base.py  data.py  schema.py
tests/function_tests/: base.py  test.py  test_databases.py  test_mssql.py  test_mysql.py  test_postgresql.py  test_sqlite.py
tests/function_tests/base/: fixtures.py  schema.py
tests/handlers/: test_create_about_handler.py  test_create_engine_handler.py  test_create_meta_handler.py  test_create_schema_handler.py  test_create_version_handler.py  test_create_welcome_handler.py  test_schema_handler.py  test_version_handler.py  test_welcome_handler.py
tests/interfaces/: test_create_field.py  test_create_field_definition.py  test_create_interface.py  test_create_optional_interface.py  test_create_pk_interface.py  test_get_col_default.py  test_get_col_type.py  test_get_column_default.py  test_get_column_type.py
tests/models/: test_create_db_dependency.py  test_create_db_engine.py  test_create_db_interface.py  test_create_db_metadata.py  test_create_db_models.py  test_create_db_url.py  test_create_session_factory.py  test_create_session_iterator.py
tests/params/: test_apply_ordering_params.py  test_apply_pagination_params.py  test_create_ordering_dependency.py  test_create_pagination_dependency.py  test_get_ordering_params.py  test_get_pagination_params.py
tests/queries/: test_apply_ordering_params.py  test_apply_pagination_params.py  test_delete_session_record.py  test_execute_session_query.py  test_get_record_or_404.py
tests/routers/: test_create_meta_router.py  test_create_model_router.py  test_create_table_router.py  test_create_version_router.py  test_create_welcome_router.py
tests/unit_tests/app/: test_create_app.py  test_create_router.py
tests/unit_tests/cli/: test_configure_cli_logging.py  test_create_argument_parser.py  test_create_cli_parser.py
tests/unit_tests/dependencies/: test_apply_ordering_params.py  test_create_db_dependency.py  test_get_ordering_params.py
tests/unit_tests/handlers/: test_version_handler.py
tests/unit_tests/interfaces/: test_create_field_definition.py  test_create_interface.py  test_get_column_type.py  test_iter_columns.py
tests/unit_tests/models/: test_create_connection_pool.py  test_create_db_engine.py  test_create_db_metadata.py  test_create_db_models.py  test_create_db_url.py  test_create_session_factory.py  test_create_session_iterator.py  test_parse_db_settings.py
tests/unit_tests/params/: test_apply_ordering_params.py  test_apply_pagination_params.py  test_get_ordering_params.py  test_get_pagination_params.py
tests/unit_tests/queries/: test_commit_session.py  test_delete_session_record.py
tests/unit_tests/routers/: test_create_meta_router.py  test_create_welcome_router.py
tests/utils/: test_apply_ordering_params.py  test_apply_pagination_params.py  test_get_ordering_params.py  test_get_pagination_params.py
