[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "auto-rest"
version = "0.0.0"
readme = "README.md"
description = "Automatically map database schemas and deploy per-table REST API endpoints."
authors = ["Better HPC LLC"]
keywords = ["Better", "HPC", "automatic", "rest", "api"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development",
    "Typing :: Typed"
]

[tool.poetry.scripts]
auto-rest = "auto_rest.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
aiomysql = "^0.2.0"
aioodbc = "^0.5.0"
asyncpg = "^0.30.0"
fastapi = "^0.115.6"
httpx = "^0.28.1"
oracledb = "^2.5.1"
sqlalchemy = "^2.0.36"
uvicorn = "^0.34.0"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
coverage = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.49"
