[build-system]
requires = ["poetry-core==2"]
build-backend = "poetry.core.masonry.api"

[project]
name = "auto-rest-api"
version = "0.0.0"
readme = "README.md"
description = "Automatically map database schemas and deploy per-table REST API endpoints."
authors = [{ name = "Better HPC LLC" }]
license = "GPL-3.0-only"
keywords = ["Better", "HPC", "automatic", "rest", "api"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development",
    "Typing :: Typed"
]
requires-python = ">=3.11,<4"
dependencies = [
    "aiomysql==0.3.2",
    "aioodbc==0.5.0",
    "aiosqlite==0.20.0",
    "asgi-correlation-id==4.3.4",
    "asyncpg==0.30.0",
    "colorlog (>=6.9.0,<7.0.0)",
    "fastapi==0.120.1",
    "greenlet==3.2.4",
    "httpx==0.28.1",
    "oracledb==2.5.1",
    "pydantic==2.12.3",
    "pyyaml==6.0.3",
    "sqlalchemy==2.0.44",
    "uvicorn==0.38.0",
]

[tool.poetry]
packages = [
    { include = "auto_rest" },
]

[tool.poetry.group.tests.dependencies]
coverage = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.0"
mkdocstrings-python = "^2.0.0"

[tool.poetry.scripts]
auto-rest = "auto_rest.__main__:main"

[tool.coverage.run]
branch = true
source = ["auto_rest"]
omit = ["tests/*"]
