[build-system]
requires = ["poetry-core==2"]
build-backend = "poetry.core.masonry.api"

[project]
name = "auto-rest-api"
version = "0.0.0"
readme = "README.md"
description = "Automatically map database schemas and deploy per-table REST API endpoints."
authors = [{ name = "Better HPC LLC" }]
license = "GPL-3.0-only"
keywords = ["Better", "HPC", "automatic", "rest", "api"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development",
    "Typing :: Typed"
]
requires-python = ">=3.11,<4"
dependencies = [
    "aiomysql==0.3.2",
    "mssql-python==1.5.0",
    "aiosqlite==0.22.1",
    "asgi-correlation-id==4.3.4",
    "asyncpg==0.31.0",
    "colorlog (>=6.9.0,<7.0.0)",
    "fastapi==0.135.3",
    "greenlet==3.4.0",
    "httpx==0.28.1",
    "oracledb==3.4.2",
    "pydantic==2.12.5",
    "pyyaml==6.0.3",
    "sqlalchemy==2.1.0b1",
    "uvicorn==0.44.0",
]

[tool.poetry]
packages = [
    { include = "auto_rest" },
]

[tool.poetry.group.tests.dependencies]
coverage = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.6"
mkdocstrings-python = "^2.0.3"

[tool.poetry.scripts]
auto-rest = "auto_rest.__main__:main"

[tool.coverage.run]
branch = true
source = ["auto_rest"]
omit = ["tests/*"]
